fixes TypeError: unhashable type: 'list',  changed to immutable tuple

--- a/train.ipynb
+++ b/train.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Install packages\n",
     "\n",
-    "!pip install ksim==0.1.2 xax==0.3.0 mujoco-scenes"
+    "!pip install ksim==0.1.2 xax==0.3.0 mujoco==3.3.2 mujoco-scenes"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# Set up environment variables\n",
-    "%env MUJOCO_GL=egl"
+    "%env MUJOCO_GL=egl #comment out to run local on mac"
    ]
   },
   {
@@ -565,7 +565,7 @@
     "            ksim.JointZeroPositionRandomizer(scale_lower=math.radians(-2), scale_upper=math.radians(2)),\n",
     "        ]\n",
     "\n",
-    "    def get_events(self, physics_model: ksim.PhysicsModel) -> list[ksim.Event]:\n",
+    "    def get_events(self, physics_model: ksim.PhysicsModel) -> tuple[ksim.Event, ...]:\n",
     "        return [\n",
     "            ksim.PushEvent(\n",
     "                x_force=1.0,\n",
@@ -579,7 +579,7 @@
     "            ),\n",
     "        ]\n",
     "\n",
-    "    def get_resets(self, physics_model: ksim.PhysicsModel) -> list[ksim.Reset]:\n",
+    "    def get_resets(self, physics_model: ksim.PhysicsModel) -> tuple[ksim.Reset, ...]:\n",
     "        return [\n",
     "            ksim.RandomJointPositionReset.create(physics_model, {k: v for k, v in ZEROS}, scale=0.1),\n",
     "            ksim.RandomJointVelocityReset(),\n",
